// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should not register a user if the username is incorrect 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Argument Validation Error],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`it should register a user 1`] = `
Object {
  "data": Object {
    "register": Object {
      "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkYXRhIjp7ImlkIjoxLCJ1c2VybmFtZSI6ImFkbWluIiwiZGlzcGxheV9uYW1lIjoiQWRtaW4ifSwiaWF0IjoxNjEwMDQ2NTMzLCJleHAiOjE2MTA2NTEzMzN9.bYEW28mdwBipi0AHiqh7M6gS362EBSQdB0u3fZq60Fs",
      "user": Object {
        "created_at": "2021-01-07T19:08:53.831Z",
        "display_name": "Admin",
        "email": "admin@test.fr",
        "id": "1",
        "updated_at": "2021-01-07T19:08:53.831Z",
        "username": "admin",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`it should throw an unauthorized error if there is no token 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Unauthorized],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`it should throw expired Token error 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: jwt expired],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
